Added new build target test, which switches the root component from App to Test, used to test new components

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "VITE_TEST=1 vite",
     "build": "vite build",
     "preview": "vite preview"
   },
