--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.0"
+    "react-router-dom": "^6.6.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
