--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
