--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "json-stringify-pretty-compact": "^4.0.0",
+    "jsoneditor": "^9.9.2",
     "react-hook-form": "^7.41.1",
+    "stringify-object": "^4.0.1",
     "vite": "^4.0.0",
     "vite-plugin-svgr": "^2.4.0"
   }
