--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "json-stringify-pretty-compact": "^4.0.0",
     "jsoneditor": "^9.9.2",
+    "pretty-format": "^29.3.1",
     "react-hook-form": "^7.41.1",
     "stringify-object": "^4.0.1",
     "vite": "^4.0.0",
