--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
@@ -32,6 +33,7 @@
     "react-hook-form": "^7.41.1",
     "stringify-object": "^4.0.1",
     "vite": "^4.0.0",
+    "vite-plugin-babel": "^1.1.3",
     "vite-plugin-svgr": "^2.4.0"
   }
 }
