--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@floating-ui/react": "^0.18.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
