mqtt backend server

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_REACT_APP_BROKER_PROTOCOL=ws
 VITE_REACT_APP_BROKER_USERNAME=pavlos
 VITE_REACT_APP_BROKER_PASSWORD=mindtr@p
 VITE_REACT_APP_BROKER_PREFIX=/themaze
+VITE_MQTT_SERVER=prod
