--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "node ./tests/test.js"
   },
   "dependencies": {
+    "idb": "^7.1.1",
+    "pino": "^8.11.0",
+    "precompiled-mqtt": "^4.3.14-beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,7 +20,6 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "pretty-format": "^29.4.3",
     "react-router-dom": "^6.6.0",
     "vite": "^4.0.0"
   }
